--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm ci && npm run build
         env:
-          REACT_APP_API_BASE_URL: https://us-central1-shout-outs-lab-89003.cloudfunctions.net/shoutouts
+          REACT_APP_API_URL: https://us-central1-shout-outs-lab-89003.cloudfunctions.net/shoutouts
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
